# todo-and-timecard-tui

./: .gitattributes  .gitignore  CHANGELOG.MD  CMakeLists.txt  FileBundlerTarget  JP.README.MD  LICENSE  NOTICE  README.MD  VERSION
.github/workflows/: cmake-multi-platform.yml
dependencies/sqlite3/: CMakeLists.txt
docs/: filebundler.MD  taskFromPageNumber.sql
resource/: change_to_only_one_task.sql  gantt_tasks_from_duration.sql  initialize_db.sql  is_task_siblings.sql  mig_v1.sql  open_db_preproc.sql  select_active_task.sql  sum_total_worktime.sql  sum_worktime.sql
src/: main.cpp  resource.h
src/components/: Console.cpp  Console.h  ErrorDialogBase.cpp  ErrorDialogBase.h  GanttChartTimelineBase.cpp  GanttChartTimelineBase.h  TaskListView.cpp  TaskListView.h  custom_menu_entry.cpp  custom_menu_entry.h
src/components/MainPage/: ActiveTaskBase.cpp  MainPage.cpp  MainPage.h  TaskDetailBase.cpp  TaskListViewBase.cpp  TaskListViewData.cpp
src/components/TodoListPageComponents/: ActiveTaskBase.cpp  TaskDetailBase.cpp  TaskListViewBase.cpp  TaskListViewData.cpp  TodoListPageComponents.cpp  TodoListPageComponents.h
src/core/: DBManager.cpp  DBManager.h  DBMigrator.cpp  DBMigrator.h  Logger.cpp  Logger.h  TodoAndTimeCardApp.cpp  TodoAndTimeCardApp.h
src/decorator/: PageDecorator.cpp  PageDecorator.h
src/elements/: GanttChartLine.cpp  GanttChartLine.h
src/lib/git-tui/: LICENSE  scroller.cpp  scroller.hpp
src/page/: Page.cpp  Page.h  PageBase.cpp  PageBase.h  PageManager.cpp  PageManager.h  SettingsPage.cpp  SettingsPage.h  TaskWorktimeDetailsPage.cpp  TaskWorktimeDetailsPage.h  TodoListPage.cpp  TodoListPage.h  WorktimeSummaryPage.cpp  WorktimeSummaryPage.h
src/utilities/: DurationTimer.cpp  DurationTimer.h  TimezoneUtil.cpp  TimezoneUtil.h  Utilities.cpp  Utilities.h
workspace/: README.MD
